RESOLVED FIXED269430
[iOS] Pressing any modifier with a hardware keyboard debug asserts under -[WebEvent characters]
https://bugs.webkit.org/show_bug.cgi?id=269430
Summary [iOS] Pressing any modifier with a hardware keyboard debug asserts under -[We...
Wenson Hsieh
Reported 2024-02-14 20:19:18 PST
Attachments
Wenson Hsieh
Comment 1 2024-02-14 20:33:28 PST
EWS
Comment 2 2024-02-14 23:33:54 PST
Committed 274701@main (7fd6818d9180): <https://commits.webkit.org/274701@main> Reviewed commits have been landed. Closing PR #24480 and removing active labels.
EWS
Comment 3 2024-05-09 18:18:27 PDT
Committed 272448.1006@safari-7618-branch (50edf97cbbd4): <https://commits.webkit.org/272448.1006@safari-7618-branch> Reviewed commits have been landed. Closing PR #1275 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.