Source/WebCore/platform/ios/WebEvent.mm
@@ -52,6 +52,9 @@ using WebCore::windowsKeyCodeForCharCode;
 #if USE(BROWSERENGINEKIT)
     RetainPtr<BEKeyEntry> _originalKeyEntry;
 #endif
+#if ASSERT_ENABLED
+    BOOL _shouldAssertWhenAccessingCharactersForKey;
+#endif
 }
 
 @synthesize type = _type;
@@ -387,15 +390,15 @@ static NSString *normalizedStringWithAppKitCompatibilityMapping(NSString *charac
 
 - (NSString *)characters
 {
-    ASSERT(_type == WebEventKeyDown || _type == WebEventKeyUp);
-    ASSERT(!(_keyboardFlags & WebEventKeyboardInputModifierFlagsChanged));
+    ASSERT_IMPLIES(_shouldAssertWhenAccessingCharactersForKey, _type == WebEventKeyDown || _type == WebEventKeyUp);
+    ASSERT_IMPLIES(_shouldAssertWhenAccessingCharactersForKey, !(_keyboardFlags & WebEventKeyboardInputModifierFlagsChanged));
     return retainPtr(_characters).autorelease();
 }
 
 - (NSString *)charactersIgnoringModifiers
 {
-    ASSERT(_type == WebEventKeyDown || _type == WebEventKeyUp);
-    ASSERT(!(_keyboardFlags & WebEventKeyboardInputModifierFlagsChanged));
+    ASSERT_IMPLIES(_shouldAssertWhenAccessingCharactersForKey, _type == WebEventKeyDown || _type == WebEventKeyUp);
+    ASSERT_IMPLIES(_shouldAssertWhenAccessingCharactersForKey, !(_keyboardFlags & WebEventKeyboardInputModifierFlagsChanged));
     return retainPtr(_charactersIgnoringModifiers).autorelease();
 }
 
@@ -573,6 +576,9 @@ static inline bool isChangingKeyModifiers(BEKeyEntry *event)
     _tabKey = NO; // FIXME: Populate this field appropriately.
     _keyRepeating = event.keyRepeating;
     _originalKeyEntry = event;
+#if ASSERT_ENABLED
+    _shouldAssertWhenAccessingCharactersForKey = YES;
+#endif
 
     return self;
 }
